<resources>
    <string name="app_name">Eredivisie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eredivisie</string>
    <string name="nav_header_subtitle">No email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_standings">Standings</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_matches">Matches</string>
    <string name="team_crest">Team Crest</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_now">Already have an account? Login now</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="eredivisie_logo_desc">eredivisie_logo</string>
    <string name="standings_home">standings_home</string>
    <string name="teams_home">teams_home</string>
    <string name="matches_home">matches_home</string>
    <string name="profile_home">profile_home</string>
    <string name="profile">PROFILE</string>
    <string name="standings">STANDINGS</string>
    <string name="matches">MATCHES</string>
    <string name="teams">TEAMS</string>
    <string name="developed_by_isaias_xavier">Developed by Isaias Xavier ©</string>
</resources>
