<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_standings"
            android:icon="@drawable/ic_menu_standings"
            android:title="@string/menu_standings" />

        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_menu_teams"
            android:title="@string/menu_teams" />

        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/ic_menu_matches"
            android:title="@string/menu_matches" />
    </group>
</menu>